--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
     "ngx-cookie-service": "^15.0.0",
     "ngx-spinner": "^15.0.1",
+    "ngx-tabset": "^2.2.0",
     "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
