--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+    "@ng-select/ng-select": "^10.0.3",
+    "angular-datatables": "^14.0.2",
+    "ckeditor": "^4.12.1",
+    "ng-multiselect-dropdown": "^0.3.9",
+    "ng2-search-filter": "^0.5.1",
     "ngx-cookie-service": "^15.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^15.0.1",
     "ngx-tabset": "^2.2.0",
     "ngx-toastr": "^16.0.1",
@@ -33,6 +40,7 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
